--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="my-16 text-center text-sm leading-relaxed text-gray-600">
-    <p class="mb-2">&copy; Ian Rodrigues</p>
-    <p>Made with ❤️ with <a href="/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">Tailwind</a> and <a href="/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">Hugo</a>.</p>
+    <p class="mb-2">&copy; {{ .Site.Title }}</p>
+    <p>Made with ❤️ with <a href="https://tailwindcss.com/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">Tailwind</a> and <a href="https://gohugo.io/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">Hugo</a>.</p>
   </div>
 </footer>
