--- a/layouts/partials/twitter_card.html
+++ b/layouts/partials/twitter_card.html
@@ -1,6 +1,6 @@
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} @ {{ .Site.Title }}{{ end }}">
-<meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}">
-<meta name="twitter:site" content="{{ .Site.BaseURL }}">
-<meta name="twitter:creator" content="{{ .Site.Params.Author }}">
-<meta name="twitter:image" content="{{ .Site.Params.Avatar | absURL }}">
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} @ {{ .Site.Title }}{{ end }}" />
+<meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
+<meta name="twitter:site" content="{{ .Site.BaseURL }}" />
+<meta name="twitter:creator" content="{{ .Site.Params.Author }}" />
+<meta name="twitter:image" content="{{ .Site.Params.Avatar | absURL }}" />
