--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,33 +1,41 @@
 <header class="m-4 md:mx-0 md:my-32 text-center">
   <h1 class="my-2 font-sans text-5xl leading-tight font-bold text-gray-800">
-    Ian Rodrigues
+    {{ .Site.Title }}
   </h1>
   <p class="mb-6 text-2xl text-gray-500">
-    Software engineer at Algolia. Created Laravel Zero, Collision, Larastan, PHP Insights, and more.
+    {{ .Site.Params.Tagline }}
   </p>
   <nav class="text-xl text-gray-500">
-    <a href="/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">
+    <a href="{{ .Site.BaseURL }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">
       Blog
     </a>
     &nbsp;/&nbsp;
     <a href="/uses" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">
       Uses
     </a>
-    <!-- &nbsp;/&nbsp;
-    <a href="/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">
-      Resume
-    </a> -->
+    {{ if isset .Site.Params "resume" }}
     &nbsp;/&nbsp;
-    <a href="https://twitter.com/ianrdgs" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
+    <a href="{{ .Site.Params.Resume | absURL }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
+      Resume
+    </a>
+    {{ end }}
+    {{ if isset .Site.Params "twitter" }}
+    &nbsp;/&nbsp;
+    <a href="https://twitter.com/{{ .Site.Params.Twitter }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
       Twitter
     </a>
+    {{ end }}
+    {{ if isset .Site.Params "github" }}
     &nbsp;/&nbsp;
-    <a href="https://github.com/ianrodrigues" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
+    <a href="https://github.com/{{ .Site.Params.Github }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
       GitHub
     </a>
+    {{ end }}
+    {{ if isset .Site.Params "linkedin" }}
     &nbsp;/&nbsp;
-    <a href="https://www.linkedin.com/in/ianrdgs/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
+    <a href="https://www.linkedin.com/in/{{ .Site.Params.Linkedin }}/" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">
       LinkedIn
     </a>
+    {{ end }}
   </nav>
 </header>
