--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <section class="m-4 md:mx-0 md:my-8">
-  {{ $paginator := .Paginate (where .Site.RegularPages "Section" "posts").ByPublishDate.Reverse 1 }}
+  {{ $paginator := .Paginate (where .Site.RegularPages "Section" "posts").ByPublishDate.Reverse }}
   {{ range $paginator.Pages }}
   <div class="border-t-8 border-blue-500">
     <a href="{{ .Permalink }}" class="block my-2 font-sans text-5xl leading-tight font-bold text-gray-800">
@@ -11,28 +11,30 @@
     <div class="my-8 text-lg leading-relaxed text-gray-600">
       <p class="mb-6">{{ .Summary }}</p>
 
-      <p class="mb-6"><a href="{{ .Permalink }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">[Read More]</a></p>
+      <p class="mb-6"><a href="{{ .Permalink }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">[{{ i18n "read_more" }}]</a></p>
     </div>
   </div>
   {{ end }}
 </section>
 
+{{ if gt $paginator.TotalPages 1 }}
 <section class="m-4 md:mx-0 md:my-8 border-t border-b border-gray-200">
   <div class="flex">
     <div class="w-1/2 text-left py-8 border-r border-gray-200">
       {{ if $paginator.HasNext }}
       <a href="{{ $paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold">
-        Older Posts
+        {{ i18n "older_posts" }}
       </a>
       {{ end }}
     </div>
     <div class="w-1/2 text-right py-8">
       {{ if $paginator.HasPrev }}
       <a href="{{ $paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold">
-        Newer Posts
+        {{ i18n "newer_posts" }}
       </a>
       {{ end }}
     </div>
   </div>
 </section>
+{{ end }}
 {{ end }}
