--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,3 +1,3 @@
 <p class="text-gray-500">
-  Ian Rodrigues | <time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "Jan 01, 2006" }}</time> | {{ .ReadingTime }} min read
+  Ian Rodrigues | <time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "Jan 01, 2006" }}</time> | {{ .ReadingTime }} min {{ i18n "read" }}
 </p>
