preparing for production

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
 <section class="m-4 md:mx-0 md:my-8">
-  <img class="max-w-lg mx-auto" src="{{ "images/error-404-monochrome.svg" | absURL }}" alt="Page Not Found" />
+  <img class="max-w-lg mx-auto" src="{{ "images/error-404-monochrome.svg" | absURL }}" alt="404 Page Not Found" />
 </section>
 {{ end }}
