--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,14 +22,14 @@
   <div class="flex">
     <div class="w-1/2 text-left py-8 border-r border-gray-200">
       {{ if $paginator.HasNext }}
-      <a href="{{ $paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
+      <a href="{{ $paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold">
         {{ i18n "older_posts" }}
       </a>
       {{ end }}
     </div>
     <div class="w-1/2 text-right py-8">
       {{ if $paginator.HasPrev }}
-      <a href="{{ $paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
+      <a href="{{ $paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold">
         {{ i18n "newer_posts" }}
       </a>
       {{ end }}
