--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <section class="m-4 md:mx-0 md:my-8">
-  <div class="border-t-8 border-blue-500">
+  <div class="border-t-4 border-orange-500">
     <h2 class="my-2 font-sans text-5xl leading-tight font-bold text-gray-800">
       {{ .Title }}
     </h2>
