--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -25,12 +25,12 @@ article > p > a:hover {
 
 /* purgecss ignore */
 article > p > code {
-  @apply .p-1 .border .border-gray-100 .bg-gray-50
+  @apply .p-1 .border .border-white .bg-gray-100
 }
 
 /* purgecss ignore */
 article > .highlight > .chroma {
-  @apply .p-4 .overflow-x-scroll .font-mono
+  @apply .p-6 .bg-gray-100 .font-mono .overflow-x-auto
 }
 
 /* purgecss ignore */
@@ -40,5 +40,5 @@ article > ul {
 
 /* purgecss ignore */
 article > h3 {
-  @apply .font-sans .font-bold .text-2xl .leading-snug .text-gray-800 .inline-block .border-t-4 .border-indigo-500 .mt-8
+  @apply .font-sans .font-bold .text-2xl .leading-snug .inline-block .border-t-4 .border-orange-500 .mt-8 .py-1
 }
