--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,1 +1,3 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js" defer></script>
+
+{{ template "_internal/google_analytics.html" . }}
