--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -4,41 +4,59 @@
 
 /* purgecss ignore */
 article > * {
-  @apply .text-lg .mb-6
+  @apply text-lg mb-6;
 }
 
 /* purgecss ignore */
 article > *:last-child {
-  @apply .mb-0
+  @apply mb-0;
 }
 
 /* purgecss ignore */
 article a {
-  @apply .text-blue-500 .border-b-2 .border-blue-500 .transition .duration-200 .ease-in-out .transform
+  @apply text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform;
 }
 
 /* purgecss ignore */
 article a:focus,
 article a:hover {
-  @apply .text-blue-700 .border-blue-700
+  @apply text-blue-700 border-blue-700;
 }
 
 /* purgecss ignore */
 article > p > code {
-  @apply .p-1 .border .border-white .bg-gray-100
+  @apply p-1 border border-white bg-gray-100;
 }
 
 /* purgecss ignore */
 article > .highlight > .chroma {
-  @apply .p-6 .bg-gray-100 .font-mono .overflow-x-auto
+  @apply p-6 bg-gray-100 font-mono overflow-x-auto;
 }
 
 /* purgecss ignore */
 article > ul {
-  @apply .list-disc .list-inside
+  @apply list-disc list-inside;
+}
+
+/* purgecss ignore */
+article > h3,
+article > h4,
+article > h5,
+article > h6 {
+  @apply font-sans font-bold leading-tight;
 }
 
 /* purgecss ignore */
 article > h3 {
-  @apply .font-sans .font-bold .text-2xl .leading-snug .inline-block .border-t-4 .border-orange-500 .mt-8 .py-1
+  @apply text-2xl inline-block border-t-4 border-orange-500 mt-8 py-1;
+}
+
+/* purgecss ignore */
+article > h4 {
+  @apply text-xl;
+}
+
+/* purgecss ignore */
+article > h5 {
+  @apply text-lg;
 }
