--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -39,7 +39,7 @@
   <!-- JavaScript -->
   {{ partial "scripts.html" . }}
 </head>
-<body class="bg-gray-50 border-t-4 border-orange-500 antialiased font-serif">
+<body class="bg-cool-gray-50 border-t-4 border-orange-500 antialiased font-body">
   <main class="sm:max-w-xl md:max-w-2xl lg:max-w-3xl sm:mx-auto">
     {{ partial "header.html" . }}
 
