--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,12 @@
 {{ define "content" }}
 <section class="m-4 md:mx-0 md:my-8">
-  <div>
-    <h2 class="my-2 font-sans text-5xl leading-tight font-bold text-gray-800">
+  <div class="mb-6">
+    <h2 class="my-2 font-sans text-5xl leading-tight font-bold text-cool-gray-800">
       {{ .Title }}
     </h2>
   </div>
 
-  <article class="my-8 leading-relaxed text-gray-600">
+  <article class="leading-relaxed text-cool-gray-600">
     {{ .Content }}
   </article>
 </section>
