--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,12 +5,12 @@
   <div class="mb-16">
     {{ partial "post_meta.html" . }}
     <div class="my-2">
-      <a href="{{ .Permalink }}" class="font-sans text-3xl leading-tight font-bold text-gray-800 transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
+      <a href="{{ .Permalink }}" class="font-sans text-3xl leading-tight font-bold text-cool-gray-800 transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
         {{ .LinkTitle }}
       </a>
     </div>
 
-    <div class="my-6 text-lg leading-relaxed text-gray-600">
+    <div class="my-6 text-lg leading-relaxed text-cool-gray-600">
       <p>{{ .Summary }}</p>
     </div>
   </div>
@@ -18,18 +18,18 @@
 </section>
 
 {{ if gt $paginator.TotalPages 1 }}
-<section class="m-4 md:mx-0 md:my-8 border-t border-b border-gray-200">
+<section class="m-4 md:mx-0 md:my-8 border-t border-b border-cool-gray-200">
   <div class="flex">
-    <div class="w-1/2 text-left py-8 border-r border-gray-200">
+    <div class="w-1/2 text-left py-8 border-r border-cool-gray-200">
       {{ if $paginator.HasNext }}
-      <a href="{{ $paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
+      <a href="{{ $paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
         {{ i18n "older_posts" }}
       </a>
       {{ end }}
     </div>
     <div class="w-1/2 text-right py-8">
       {{ if $paginator.HasPrev }}
-      <a href="{{ $paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
+      <a href="{{ $paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
         {{ i18n "newer_posts" }}
       </a>
       {{ end }}
