--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,26 +1,26 @@
 <header class="mx-4 my-16 md:mx-0 md:my-32 text-center">
-  <h1 class="my-2 font-sans text-5xl leading-tight font-bold text-gray-800">
+  <h1 class="my-2 font-sans text-5xl leading-tight font-bold text-cool-gray-800">
     {{ .Site.Title }}
   </h1>
 
-  <p class="mb-6 text-2xl text-gray-500">
+  <p class="mb-6 text-2xl text-cool-gray-500">
     {{ .Site.Params.Tagline }}
   </p>
 
-  <nav class="text-xl text-gray-500">
-    <a href="{{ .Site.BaseURL | relLangURL }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">{{ i18n "writings" }}</a>
+  <nav class="text-xl text-cool-gray-500">
+    <a href="{{ .Site.BaseURL | relLangURL }}" class="text-blue-600 border-b-2 border-blue-600 transition duration-200 ease-in-out transform focus:text-blue-400 focus:border-blue-400 hover:text-blue-400 hover:border-blue-400">{{ i18n "writings" }}</a>
     {{ with .Site.GetPage "uses.md" }}
     &nbsp;/&nbsp;
-    <a href="{{ .Permalink }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">{{ .LinkTitle }}</a>
+    <a href="{{ .Permalink }}" class="text-blue-600 border-b-2 border-blue-600 transition duration-200 ease-in-out transform focus:text-blue-400 focus:border-blue-400 hover:text-blue-400 hover:border-blue-400">{{ .LinkTitle }}</a>
     {{ end }}
     {{ if isset .Site.Params "resume" }}
     &nbsp;/&nbsp;
-    <a href="{{ .Site.Params.Resume | absURL }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700" target="_blank">{{ i18n "resume" }}</a>
+    <a href="{{ .Site.Params.Resume | absURL }}" class="text-blue-600 border-b-2 border-blue-600 transition duration-200 ease-in-out transform focus:text-blue-400 focus:border-blue-400 hover:text-blue-400 hover:border-blue-400" target="_blank">{{ i18n "resume" }}</a>
     {{ end }}
     {{ if .IsTranslated }}
     {{ range .Translations }}
     &nbsp;/&nbsp;
-    <a href="{{ .Permalink }}" class="text-blue-500 border-b-2 border-blue-500 transition duration-200 ease-in-out transform focus:text-blue-700 focus:border-blue-700 hover:text-blue-700 hover:border-blue-700">{{ .Language.LanguageName }}</a>
+    <a href="{{ .Permalink }}" class="text-blue-600 border-b-2 border-blue-600 transition duration-200 ease-in-out transform focus:text-blue-400 focus:border-blue-400 hover:text-blue-400 hover:border-blue-400">{{ .Language.LanguageName }}</a>
     {{ end}}
     {{ end }}
   </nav>
