--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<section class="m-4 md:mx-0 md:my-8">
+<section class="m-4 md:mx-0 md:my-8 break-words">
   <div class="mb-6">
     {{ partial "post_meta.html" . }}
     <h2 class="font-sans text-5xl leading-tight font-bold text-cool-gray-800">
@@ -7,51 +7,49 @@
     </h2>
   </div>
 
-  <article class="leading-relaxed text-cool-gray-600 break-words">
+  <article class="leading-relaxed text-cool-gray-600">
     {{ .Content }}
   </article>
 </section>
 
-<section class="m-4 md:mx-0 md:my-8 bg-yellow-50">
+<section class="m-4 md:mx-0 md:my-8 bg-orange-50 border border-orange-500">
   <div class="px-4 py-8">
-    <div class="mb-4">
-      <p class="text-md text-center leading-relaxed text-cool-gray-500">
+    <div class="mb-6">
+      <p class="text-center leading-relaxed text-orange-600">
         Thanks for reading and, if you enjoyed it, feel free to share. {{ if isset .Site.Params "twitter" }}And, make sure you <a href="https://twitter.com/{{ .Site.Params.Twitter }}" class="text-blue-600 border-b-2 border-blue-600 transition duration-200 ease-in-out transform focus:text-blue-400 focus:border-blue-400 hover:text-blue-400 hover:border-blue-400" target="_blank">follow me on Twitter</a> to get notified when I write a new post{{ end }}.
       </p>
     </div>
 
     <div class="flex justify-center">
-      <a href="https://twitter.com/intent/tweet?url={{ .Permalink }}&via=ianrdgs&text=I+just+read+&quot;{{ .LinkTitle }}&quot;" class="mr-4 transition duration-500 ease-in-out transform focus:scale-110 hover:scale-110 text-cool-gray-500 focus:text-blue-500 hover:text-blue-500" target="_blank">
-        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 512 512">
+      <a href="https://twitter.com/intent/tweet?url={{ .Permalink }}&via=ianrdgs&text=I+just+read+&quot;{{ .LinkTitle }}&quot;" class="flex items-center mr-4 transition duration-500 ease-in-out transform focus:scale-110 hover:scale-110 text-cool-gray-500 focus:text-blue-500 hover:text-blue-500" target="_blank">
+        <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 512 512">
           <path d="M492 109.5c-17.4 7.7-36 12.9-55.6 15.3 20-12 35.4-31 42.6-53.6-18.7 11.1-39.4 19.2-61.5 23.5C399.8 75.8 374.6 64 346.8 64c-53.5 0-96.8 43.4-96.8 96.9 0 7.6.8 15 2.5 22.1-80.5-4-151.9-42.6-199.6-101.3-8.3 14.3-13.1 31-13.1 48.7 0 33.6 17.1 63.3 43.1 80.7C67 210.7 52 206.3 39 199v1.2c0 47 33.4 86.1 77.7 95-8.1 2.2-16.7 3.4-25.5 3.4-6.2 0-12.3-.6-18.2-1.8 12.3 38.5 48.1 66.5 90.5 67.3-33.1 26-74.9 41.5-120.3 41.5-7.8 0-15.5-.5-23.1-1.4C62.9 432 113.8 448 168.4 448 346.6 448 444 300.3 444 172.2c0-4.2-.1-8.4-.3-12.5 18.9-13.7 35.3-30.8 48.3-50.2z" clip-rule="evenodd" fill-rule="evenodd"></path>
         </svg>
+        <span class="hidden md:inline-block">Share on Twitter</span>
       </a>
 
-      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ .Permalink }}" class="transition duration-500 ease-in-out transform focus:scale-110 hover:scale-110 text-cool-gray-500 focus:text-blue-500 hover:text-blue-500" target="_blank">
-        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 430.1 430.1">
+      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ .Permalink }}" class="flex items-center transition duration-500 ease-in-out transform focus:scale-110 hover:scale-110 text-cool-gray-500 focus:text-blue-500 hover:text-blue-500" target="_blank">
+        <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 430.1 430.1">
           <path d="M398.4 0H31.8C14.2 0 0 13.8 0 30.8v368.5c0 17 14.2 30.8 31.8 30.8h366.6c17.5 0 31.8-13.8 31.8-30.8V30.8c-.1-17-14.3-30.8-31.8-30.8zm-268 360h-65V165.8h65V360zM97.9 139.3h-.4c-21.8 0-35.9-14.9-35.9-33.6 0-19 14.5-33.5 36.8-33.5 22.2 0 35.9 14.5 36.3 33.5 0 18.7-14.1 33.6-36.8 33.6zM364.7 360h-65V256.1c0-26.1-9.4-43.9-32.9-43.9-18 0-28.6 12-33.3 23.6-1.7 4.1-2.2 9.9-2.2 15.7V360h-65s.9-176 0-194.2h65v27.5c8.6-13.2 24-32.1 58.5-32.1 42.8 0 74.8 27.7 74.8 87.4l.1 111.4zM230.9 194c.1-.2.3-.4.4-.6v.6h-.4z" clip-rule="evenodd" fill-rule="evenodd"></path>
         </svg>
+        <span class="hidden md:inline-block">Share on LinkedIn</span>
       </a>
     </div>
   </div>
 </section>
 
-<section class="m-4 md:mx-0 md:my-8 border-t border-b border-cool-gray-100">
+<section class="m-4 md:mx-0 md:my-8 border-t border-b border-cool-gray-100 break-words">
   <div class="flex">
     <div class="w-1/2 text-left py-8 pr-8 border-r border-cool-gray-200">
       {{ if .PrevInSection }}
       <p class="text-md text-cool-gray-500">{{ i18n "previous_post" }}</p>
-      <a href="{{ .PrevInSection.Permalink }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
-        {{ .PrevInSection.LinkTitle }}
-      </a>
+      <a href="{{ .PrevInSection.Permalink }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">{{ .PrevInSection.LinkTitle }}</a>
       {{ end }}
     </div>
     <div class="w-1/2 text-right py-8 pl-8">
       {{ if .NextInSection }}
       <p class="text-md text-cool-gray-500">{{ i18n "next_post" }}</p>
-      <a href="{{ .NextInSection.Permalink }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
-        {{ .NextInSection.LinkTitle }}
-      </a>
+      <a href="{{ .NextInSection.Permalink }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">{{ .NextInSection.LinkTitle }}</a>
       {{ end }}
     </div>
   </div>
