--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -13,6 +13,11 @@
 }
 
 /* purgecss ignore */
+.emoji {
+  font-family: Apple Color Emoji, Segoe UI Emoji, NotoColorEmoji, Segoe UI Symbol, Android Emoji, EmojiSymbols;
+}
+
+/* purgecss ignore */
 article {
   @apply text-lg;
 }
