--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,37 +1,30 @@
 {{ define "content" }}
-<section class="m-4 md:mx-0 md:my-8">
-  {{ $paginator := .Paginate (where .Site.RegularPages "Section" "posts").ByPublishDate.Reverse }}
-  {{ range $paginator.Pages }}
-  <div class="mb-16">
-    {{ partial "post_meta.html" . }}
-    <div class="my-2">
-      <a href="{{ .Permalink }}" class="font-sans text-3xl leading-tight font-bold text-cool-gray-800 transition duration-200 ease-in-out transform focus:text-orange-500 hover:text-orange-500">
-        {{ .LinkTitle }}
-      </a>
-    </div>
-
-    <div class="my-6 text-lg leading-relaxed text-cool-gray-600">
-      <p>{{ .Summary }}</p>
-    </div>
+<section class="mx-4 my-16 md:mx-0 md:my-32">
+  <div class="mb-6 break-words">
+    <h2 class="font-sans text-5xl leading-tight font-bold text-cool-gray-800">{{ .Title }}</h2>
   </div>
+
+  {{ partial "page/content.html" . }}
+</section>
+
+<section class="m-4 md:mx-0 md:my-8">
+  {{ range .Paginator.Pages }}
+  {{ partial "post/summary.html" . }}
   {{ end }}
 </section>
 
-{{ if gt $paginator.TotalPages 1 }}
+{{ if gt .Paginator.TotalPages 1 }}
 <section class="m-4 md:mx-0 md:my-8 border-t border-b border-cool-gray-200">
   <div class="flex">
     <div class="w-1/2 text-left py-8 border-r border-cool-gray-200">
-      {{ if $paginator.HasNext }}
-      <a href="{{ $paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold">
-        {{ i18n "older_posts" }}
-      </a>
+      {{ if .Paginator.HasNext }}
+      <a href="{{ .Paginator.Next.URL }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold">{{ i18n "older_posts" }}</a>
       {{ end }}
     </div>
+
     <div class="w-1/2 text-right py-8">
-      {{ if $paginator.HasPrev }}
-      <a href="{{ $paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold">
-        {{ i18n "newer_posts" }}
-      </a>
+      {{ if .Paginator.HasPrev }}
+      <a href="{{ .Paginator.Prev.URL }}" class="font-sans text-2xl leading-snug text-cool-gray-800 font-bold">{{ i18n "newer_posts" }}</a>
       {{ end }}
     </div>
   </div>
